--- a/src/main/resources/templates/qna/form.html
+++ b/src/main/resources/templates/qna/form.html
@@ -16,8 +16,8 @@
         <div class="panel panel-default content-main">
             <form name="question" method="post" action="/articles" th:action="@{/articles}">
                 <div class="form-group">
-                    <label for="writer">글쓴이</label>
-                    <input class="form-control" id="writer" name="writer" placeholder="글쓴이"/>
+                    <label for="writerId">글쓴이</label>
+                    <input class="form-control" id="writerId" name="writerId" placeholder="글쓴이"/>
                 </div>
                 <div class="form-group">
                     <label for="title">제목</label>
