--- a/src/main/resources/templates/article/detail.html
+++ b/src/main/resources/templates/article/detail.html
@@ -4,7 +4,7 @@
 <head>
     <title>게시글 상세</title>
 </head>
-<body class="bg-gray-50">
+<body>
 <main layout:fragment="content">
     <div class="container mx-auto px-4 py-8 max-w-4xl">
         <div class="post-header">
