--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -75,15 +75,15 @@
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/">Posts</a></li>
-                <li th:if="${session.LOGGED_IN_USER == null}"><a href="/users/login" role="button">로그인</a></li>
-                <li th:if="${session.LOGGED_IN_USER == null}"><a href="/users/join" role="button">회원가입</a></li>
-                <li th:if="${session.LOGGED_IN_USER != null}">
+                <li th:if="${session.LOGGED_IN_USER_ID == null}"><a href="/users/login" role="button">로그인</a></li>
+                <li th:if="${session.LOGGED_IN_USER_ID == null}"><a href="/users/join" role="button">회원가입</a></li>
+                <li th:if="${session.LOGGED_IN_USER_ID != null}">
                     <form action="/users/logout" method="post" style="margin: 0; padding: 0;">
                         <button type="submit" class="btn btn-link" style="text-decoration: none; color: #777; padding: 15px; border: none; background: none;">로그아웃</button>
                     </form>
                 </li>
-                <li th:if="${session.LOGGED_IN_USER != null}">
-                    <a th:href="@{/users/{id}/verify(id=${session.LOGGED_IN_USER.id})}" role="button">개인정보수정</a>
+                <li th:if="${session.LOGGED_IN_USER_ID != null}">
+                    <a th:href="@{/users/{id}/verify(id=${session.LOGGED_IN_USER_ID})}" role="button">개인정보수정</a>
                 </li>
             </ul>
         </div>
