--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -41,7 +41,7 @@
                                 <a class="link-modify-article" th:href="@{/articles/{id}/form(id=${article.id})}">수정</a>
                             </li>
                             <li>
-                                <form class="form-delete" th:action="@{/articles/{id}(id=${article.id})}" method="POST">
+                                <form class="form-delete" th:action="@{/articles/{id}(id=${article.id})}" method="POST" onsubmit="return confirm('게시글을 삭제하시겠습니까?');">
                                     <input type="hidden" name="_method" value="DELETE">
                                     <button class="link-delete-article" type="submit">삭제</button>
                                 </form>
