--- a/src/main/resources/templates/article/show.html
+++ b/src/main/resources/templates/article/show.html
@@ -99,7 +99,7 @@
                   <div class="article-util">
                       <ul class="article-util-list">
                           <li>
-                              <a class="link-modify-article" href="/questions/423/form">수정</a>
+                              <a class="link-modify-article" th:href="@{/articles/edit/{userId}/{articleId}(userId=${article.user.id}, articleId=${article.id})}">수정</a>
                           </li>
                           <li>
                               <form class="form-delete" action="/questions/423" method="POST">
