--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
                             </strong>
                             <div class="auth-info">
                                 <i class="icon-add-comment"></i>
-                                <span class="time">2016-01-15 18:47</span>
+                                <span class="time" th:text="${#temporals.format(article.createdAt, 'yyyy-MM-dd HH:mm')}">2016-01-15 18:47</span>
                                 <a th:href="@{/users/{id}(id=${article.writer.id})}" href="./user/profile.html" class="author" th:text="${article.writer.userId}">자바지기</a>
                             </div>
                             <div class="reply" title="댓글">
