--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -25,7 +25,7 @@
                         </div>
                         <div class="article-header-text">
                             <a href="#" class="article-author-name" th:text="${article.writer.userId}">kimmunsu</a>
-                            <a href="#" class="article-header-time" title="퍼머링크">
+                            <a href="#" class="article-header-time" title="퍼머링크" th:text="${#temporals.format(article.createdAt, 'yyyy-MM-dd HH:mm')}">
                                 2015-12-30 01:47
                                 <i class="icon-link"></i>
                             </a>
